# ChatDoctor

./: .gitignore  README.md  pyproject.toml  test_chat.py
chatdoctor/: __init__.py  cli.py
chatdoctor/core/: __init__.py  config.py  model.py
chatdoctor/evaluation/: __init__.py  evaluate.py  evaluate_bertscore.py  evaluate_icliniq.py
chatdoctor/inference/: chat.py
chatdoctor/rag/: __init__.py  csv_rag.py  wiki_rag.py
chatdoctor/training/: train_lora.py
chatdoctor/utils/: data_utils.py  logging_utils.py
configs/: config.yaml  training_config.yaml
docs/: API.md  EVALUATION_RESULTS.md  TRAINING.md
models/: lora_weights
models/llama3_lora/checkpoint-200/: README.md  adapter_config.json  tokenizer_config.json  trainer_state.json
models/lora_trained/: adapter_config.json  tokenizer.json
models/lora_trained/checkpoint-165/: README.md  trainer_state.json
models/mistral_lora/: README.md
models/mistral_lora/checkpoint-1400/: tokenizer_config.json  trainer_state.json
models/mistral_lora/checkpoint-1600/: README.md  adapter_config.json  trainer_state.json
models/mistral_lora/checkpoint-1745/: trainer_state.json
scripts/: chat.sh  evaluate.sh  setup.sh  train.sh
tests/: test_config.py  test_data_utils.py
